# myServer

./: CMakeLists.txt  home.html  readme.txt
cgi-bin/dataPost/: CMakeLists.txt  main.c
cgi-bin/dataView/: CMakeLists.txt  main.c
source/: io_func.c  main.c  serve.c  web_serve.c
source/include/: io_func.h  serve.h  web_serve.h
